# esp-board-common

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  board.h  board_camera.c  board_display_st7796.c  board_imu.c  board_imu.h  board_init.c  board_rtc.c  board_rtc.h  idf_component.yml
apps/camera_viewfinder/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
apps/camera_viewfinder/main/: CMakeLists.txt  idf_component.yml  main.c
apps/qr_decoder/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
apps/qr_decoder/main/: CMakeLists.txt  idf_component.yml  main.c  overlay_text.c  overlay_text.h
apps/touch_test/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
apps/touch_test/main/: CMakeLists.txt  main.c
boards/qemu/: board_config.h
boards/waveshare_p4_lcd35/: board_config.h  sdkconfig.defaults
boards/waveshare_p4_lcd43/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd2/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd35/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd35b/: board_config.h  sdkconfig.defaults
docs/: dev-workflow.md  esp32-p4-accessibility.md  lvgl-display-rotation.md  spi-vs-qspi-displays.md
docs/knowledge/: esp32-p4-usb-serial-jtag-console.md  flash-log-crash-diagnostics.md  freertos-smp-xtaskcreate-core-affinity.md  lvgl-adapter-p4-lcd43-crash.md  lvgl-transform-rotation-direct-mode.md  lvgl-widget-feasibility-by-display-path.md  text-overlay-architecture.md
include/: defs.h  lv_conf.h  mpconfig_esp32.h
src/: board.h  board_backlight.c  board_camera.c  board_camera.h  board_camera_csi.c  board_init.c  board_pipeline.c  board_pipeline.h  board_pipeline_camera_csi.c  board_pipeline_camera_csi.h  board_pipeline_camera_dvp.c  board_pipeline_camera_dvp.h  board_pipeline_display_lvgl.c  board_pipeline_display_lvgl.h  board_sdcard.c  board_touch_ft6336.c  overlay_rotated.c  overlay_rotated.h  overlay_text.c  overlay_text.h  overlay_util.h
